welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:55: error: ';' expected but 'while' found.
avance()while (!estSurBiscuit) {
        ^Balin:80: error: ';' expected but 'while' found.
avance()while (!estSurBiscuit) {
        ^Balin:105: error: ';' expected but 'while' found.
avance()while (!estSurBiscuit) {
        ^